envoy-proxy/envoy.yaml
# This envoy.yaml file is created by the cli tool 
# Change the files according to user requirments
# Created by - Vimukthi Mayyadunne
# Credits - oclif freamwork 
admin:
  access_log_path: /tmp/admin_access.log
  address:
      socket_address:
          protocol: TCP
          address: 127.0.0.1
          port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
       socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 10000
  filter_chains:
  - filters:
    - name: envoy.http_connection_manager
      typed_config:
        "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
        stat_prefix: ingress_http
        route_config:
          name: local_route
          virtual_hosts:
          - name: local_service
            domains: ["*"]
            routes:
